[Technique] Notification entity